# SF-M

./: .gitignore  README.md  index.html  package-lock.json  package.json  source.manifest.json  vite.config.ts
.github/: FUNDING.yml
docs/: PROJECT_OVERVIEW.md  SOURCE_DISTRIBUTION.md  WEBSOCKET_BRIDGE.md
public/scripts/: remote-spy.lua  script-dumper.lua  unnamed-esp.lua
scripts/: clean-workspace.mjs  ensure-dev-port.mjs  export-ui.mjs  gen-monaco-overflow-css.mjs  measure-workspace.mjs  pack-source.mjs  pack-ui-export.mjs  run-tauri-dev.mjs  run-vite.mjs  verify-source.mjs
src/: branding.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_chat.rs  ai_models.rs  bridge.rs  lib.rs  macsploit.rs  opiumware.rs  port_bridge.rs
src-tauri/wix/: main.wxs
src/app/: App.tsx  altShellBootPath.ts  appSettings.ts  crossWindowSync.ts  dialogWindowPlacement.ts  editorClearDialog.ts  initScreenStorage.ts  integratedSiteWebview.ts  legacySynapseOriginal.ts  openExternalUrl.ts  routes.tsx  shellChromeContext.tsx  tauriEnv.ts  useAppSettings.ts  windowConstraints.ts  windowPlacement.ts
src/editor/: ScriptMonacoEditor.tsx  editorAiProposals.ts  editorThemeAllowlist.ts  editorThemes.ts  luauLanguage.ts  monacoSetup.ts  monacoThemePack.ts  monaluauThemes.ts  shellMatchedEditorThemes.ts  synapseDiagnostics.ts  synapseIntellisense.ts  tomorrow-night-eighties.theme.json  vsDarkShellMonacoTheme.ts
src/imports/: svg-bj8q31w0fn.ts  svg-puhpyzdadw.ts  svg-ylg03bb51c.ts
(+181 files in other folders)
